--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.volley:volley:1.1.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.google.firebase:firebase-core:12.0.0'
+    compile 'com.google.firebase:firebase-messaging:12.0.0'
 }
 repositories {
     mavenCentral()
 }
+apply plugin: 'com.google.gms.google-services'
+
