--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeDark">
+        android:theme="@style/AppThemeLight">
         <activity
             android:name=".Controller.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
             android:name=".Controller.MainActivity"
             android:label="@string/app_name_simple"
@@ -30,6 +30,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Controller.LoginActivity"
+            android:theme="@style/AppThemeLight"/>
+        <activity android:name=".Controller.CreateUserActivity"
+            android:theme="@style/AppThemeLight"/>
+
 
         <service android:name=".Services.MessageReceiver">
             <intent-filter>
