--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.volley:volley:1.1.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    //noinspection GradleDependency
     compile 'com.google.firebase:firebase-core:12.0.0'
+    //noinspection GradleDependency
     compile 'com.google.firebase:firebase-messaging:12.0.0'
 }
 repositories {
